todo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: daily-image
          emptyDir: {}
      containers:
        - name: todo-back
          image: BACKEND_IMAGE
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
          volumeMounts:
          - name: daily-image
            mountPath: /usr/src/app/resources
        - name: todo-front
          image: FRONTEND_IMAGE
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
