todo/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-dep
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  strategy:
    canary:
      steps:
      - setWeight: 0
      - analysis:
          templates:
          - templateName: todo-cpu-usage
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: daily-image
          emptyDir: {}
      containers:
        - name: todo-back
          image: BACKEND_IMAGE
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 15
            httpGet:
               path: /healthz
               port: 3001
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 15
            httpGet:
               path: /healthz
               port: 3001
          volumeMounts:
          - name: daily-image
            mountPath: /usr/src/app/resources
        - name: todo-front
          image: FRONTEND_IMAGE
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
