todo/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-todo-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-front-svc
            port:
              number: 2345
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-back-svc
            port:
              number: 3001
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: todo-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api
